manifests/atlantis/atlantis-webhook-gateway/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  namespace: "kubenuts"
  name: "atlantis-webhook"
spec:
  gatewayClassName: alb
  infrastructure:
    parametersRef:
      group: gateway.k8s.aws
      kind: LoadBalancerConfiguration
      name: "atlantis-webhook"
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      certificateRefs:
      - name: "pg02-wildcard-cert"
    allowedRoutes:
      namespaces:
        from: Same
